Possible fix for the header cutting off to the second line

--- a/assets/css/main-element/main-contact.css
+++ b/assets/css/main-element/main-contact.css
@@ -6,7 +6,6 @@ main {
     height: 500px;
     margin-top: 2%;
     margin-left: 20%;
-    overflow: hidden;
     padding: 30px;
 }
 
